maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: ';' expected but 'else' found.
		} else {
                  ^Escaper:18: error: Unmatched closing brace '}' ignored here
}
^